Finally fix the blurry background in prod + reorder formats

--- a/src/index.scss
+++ b/src/index.scss
@@ -180,8 +180,3 @@ h5,
 h6 {
   margin-bottom: 0.5rem;
 }
-
-// Override Pico's modal backdrop blur effect
-dialog {
-  backdrop-filter: none !important;
-}
